--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
 	import { getAuth, signInAnonymously, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js";
     window.FirebaseMod = { initializeApp, getDatabase, ref, set, query, orderByChild, limitToLast, get, onValue, serverTimestamp, getAuth, signInAnonymously, onAuthStateChanged };
   </script>
+  <script defer data-domain="monkeyy.app" src="https://plausible.io/js/script.js"></script>
 </head>
 <body>
   <div class="main">
