--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>MONKEYY.APP — Banana Board 🍌</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/png" href="/favicon.png">
   <style>
     body { background: #181820; color: #fff; font-family: 'Segoe UI', Arial, sans-serif; margin: 0; padding: 0; min-height: 100vh; }
     .main { max-width: 490px; margin: 30px auto 0 auto; padding: 18px 7px 110px 7px; background: #232346; border-radius: 23px; box-shadow: 0 6px 44px #0008; text-align: center; position: relative; }
