--- a/index.html
+++ b/index.html
@@ -297,11 +297,11 @@
 	
   </style>
   <!-- SOUNDS -->
-  <audio id="soundLevelUp" src="https://cdn.pixabay.com/audio/2022/07/26/audio_12a0f3d0f3.mp3" preload="auto"></audio>
-  <audio id="soundPranked" src="https://cdn.pixabay.com/audio/2022/10/16/audio_12c2176e51.mp3" preload="auto"></audio>
-  <audio id="soundPass" src="https://cdn.pixabay.com/audio/2022/10/16/audio_12abfb10eb.mp3" preload="auto"></audio>
-  <audio id="soundMonkey1" src="https://cdn.pixabay.com/audio/2022/03/15/audio_116b6d2ed5.mp3" preload="auto"></audio>
-  <audio id="soundMonkey2" src="https://cdn.pixabay.com/audio/2022/10/25/audio_1262e0e33b.mp3" preload="auto"></audio>
+  <audio id="soundLevelUp" src="/assets/audio/levelup.mp3" preload="auto"></audio>
+  <audio id="soundPranked" src="/assets/audio/pranked.mp3" preload="auto"></audio>
+  <audio id="soundPass" src="/assets/audio/pass.mp3" preload="auto"></audio>
+  <audio id="soundMonkey1" src="/assets/audio/monkey1.mp3" preload="auto"></audio>
+  <audio id="soundMonkey2" src="/assets/audio/monkey2.mp3" preload="auto"></audio>
   <!-- html2canvas for screenshot -->
   <script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
   <script type="module">
