--- a/index.html
+++ b/index.html
@@ -644,21 +644,89 @@
 
     // -- Pranks (Adin/Cuffem/Gen-Z/sus/edgy edge)
     const pranks = [
-      {icon:"🔥", desc:"Say ‘I’m not racist, but…’ and then say something completely wholesome. Watch their face.", meta:"Wholesome Bait"},
-      {icon:"🤡", desc:"‘Ratio + L host.’ Spam until they react.", meta:"Ratio Demon"},
-      {icon:"😏", desc:"Say ‘Adin Ross is my dad’ and keep a straight face.", meta:"Streamer Kid"},
-      {icon:"🫥", desc:"Speak only in TikTok NPC phrases for 30 sec.", meta:"Sussy Baka"},
-      {icon:"🦦", desc:"Accuse them of being from Ohio. Act concerned.", meta:"Ohio Detector"},
-      {icon:"😈", desc:"Say ‘W or L rizz?’ then do your cringiest pick-up line.", meta:"Rizz Check"},
-      {icon:"💻", desc:"Call them a Discord mod. Ask for wrist reveal.", meta:"Mod Alert"},
-      {icon:"🐱", desc:"Meow and call them your Discord kitten.", meta:"Kitten Energy"},
       {icon:"💀", desc:"Speedrun getting muted. Narrate it.", meta:"Ban Speedrun"},
-      {icon:"😬", desc:"Say something that would get you a timeout IRL (but keep it TOS!).", meta:"Time-out Roulette"},
-      {icon:"📉", desc:"‘L friend. You built like a PS2 NPC.’", meta:"Down Bad Detector"},
-      {icon:"😎", desc:"Try to act like Speed for a full minute.", meta:"Speed Clone"},
-      {icon:"🍆", desc:"Drop an eggplant emoji in chat, no context.", meta:"Eggplant Drop"},
-      {icon:"🤝", desc:"Dare them to say ‘Deez’ or ‘Ligma’ on cam.", meta:"Classic Bait"},
-      {icon:"👽", desc:"Pretend to be an alien trying to fit in. Learn ‘earth customs’.", meta:"Alien Invasion"},
+	  {icon:"🤡", desc:"Troll as a different ethnicity/nationality for one minute.", meta:"Method Actor"},
+	  {icon:"🦍", desc:"Go full monkey. No context. Chest beating mandatory.", meta:"Primal Instinct"},
+	  {icon:"🍌", desc:"Try to get banned from TikTok in under a minute. Bonus if you actually do.", meta:"Banana Ban"},
+	  {icon:"🙊", desc:"Say the edgiest joke you know. Finish with ‘just a prank, bro!’", meta:"Joke Criminal"},
+	  {icon:"😬", desc:"Ask: ‘Can you say the N-word?’—but you mean ‘Ninja’.", meta:"Bait and Switch"},
+	  {icon:"💥", desc:"Tell a dark joke.", meta:"Dark Comedian"},
+	  {icon:"🤫", desc:"Try to get the other person to expose a secret.", meta:"Truth Seeker"},
+	  {icon:"🍑", desc:"Flirt with the other person using only fruity words.", meta:"Fruit Flirt"},
+	  {icon:"🦍", desc:"Go full ape for 15 seconds.", meta:"Ape Legend"},
+	  {icon:"👻", desc:"Pretend you got swatted mid-call.", meta:"Swat Bait"},
+	  {icon:"🤠", desc:"Debate if pineapple belongs on pizza. Make it a war.", meta:"Food Fight"},
+	  {icon:"😎", desc:"Try to act like Speed for a full minute.", meta:"Speed Clone"},
+	  {icon:"🥷", desc:"Use an accent and pretend you're from a hood.", meta:"Mystery Agent"},
+	  {icon:"🤖", desc:"Glitch out like an IRL NPC.", meta:"IRL Glitch"},
+	  {icon:"😏", desc:"Imitate the most annoying streamer you know.", meta:"Annoyance Pro"},
+	  {icon:"🎲", desc:"Invent a new TikTok trend on the spot.", meta:"Trendsetter"},
+	  {icon:"🎤", desc:"Make your best apology call to someone close to you.", meta:"Sorry Not Sorry"},
+	  {icon:"💅", desc:"Act extremely vain, like you’re live-streaming to 1M fans.", meta:"Diva Mode"},
+	  {icon:"💀", desc:"Say something IRL, that would get you a timeout (but don’t get arrested).", meta:"Viral Offender"},
+	  {icon:"🔥", desc:"Drop your hottest, most controversial take. No filter.", meta:"Hot Take"},
+	  {icon:"🗯️", desc:"Start a fake fight about literally nothing. Commit 100%.", meta:"Drama Magnet"},
+	  {icon:"🕵️", desc:"Pretend you're in a secret cult, hint at forbidden knowledge.", meta:"Conspiracy Guru"},
+	  {icon:"🎤", desc:"Roast the other person so hard even you cringe.", meta:"Roast Lord"},
+	  {icon:"🔥", desc:"Drop the most controversial opinion you can, and defend it like it's life or death.", meta:"Flame Bait"},
+	  {icon:"🐸", desc:"Speak only in Kermit voice. Say disturbing facts.", meta:"Frog Cursed"},
+	  {icon:"🔊", desc:"Repeat every word after someone, but louder and dumber.", meta:"Echo Menace"},
+	  {icon:"🛑", desc:"Freeze mid-sentence and stare. Don’t blink.", meta:"Stare Test"},
+	  {icon:"🤖", desc:"Pretend your Wi-Fi is lagging. Loop your phrases.", meta:"Glitch Mode"},
+	  {icon:"📉", desc:"Tell someone: ‘You built like a PS2 default skin.’ and start diss.", meta:"Visual Violation"},
+	  {icon:"🍆", desc:"Drop an eggplant emoji in silence. Hold eye contact.", meta:"Emoji Ambush"},
+	  {icon:"🗣️", desc:"Whisper ‘I'm gay’ every 10 seconds for a minute, louder each time.", meta:"Fa* Whisperer"},
+	  {icon:"📱", desc:"Accuse someone of using ChatGPT to flirt and start beef for 30s.", meta:"Bot Hunter"},
+	  {icon:"🧃", desc:"Ask: ‘You off the lean or just always this slow?’", meta:"Lean Detective"},
+	  {icon:"🤡", desc:"Say: ‘Ratio + L + you fell off.’ Smile sweetly.", meta:"Troll Ritual"},
+	  {icon:"🥶", desc:"Say: ‘I get bi*ches’ with zero conviction. Wait for others opinion.", meta:"No Rizz Challenge"},
+	  {icon:"🫵", desc:"Call someone a background character. Keep narrating them.", meta:"NPC Narrator"},
+	  {icon:"🫥", desc:"Freeze mid-sentence like you lost signal. Stay frozen.", meta:"IRL Lag Spike"},
+	  {icon:"🥷", desc:"Pretend you’re banned in 12 countries for your nationality. List fake reasons.", meta:"Global Menace"},
+	  {icon:"🎤", desc:"Drop a bar that’s fire and problematic. Mic drop.", meta:"Rapper Cancelled"},
+	  {icon:"🧟", desc:"Repeat: ‘Bro?’ in increasing volume until they break.", meta:"Zombie Loop"},
+	  {icon:"💣", desc:"Say: ‘Unpopular opinion: respect is overrated.’ and defend that idea.", meta:"Cancel Me Starter"},
+	  {icon:"🦦", desc:"Accuse someone of being from Ohio. Refuse to elaborate.", meta:"Ohio TOS Violation"},
+	  {icon:"💀", desc:"Say: ‘I'm not racist, but…’ and drop a harmless fact.", meta:"Bait Switch"},
+	  {icon:"🔊", desc:"Yell: ‘TOXIC ALERT’ every time someone speak.", meta:"Toxic Radar"},
+	  {icon:"🧢", desc:"Lie about everything you say for 30 seconds.", meta:"Gaslight Gamer"},
+	  {icon:"🧩", desc:"Say: ‘You give Roblox admin energy.’", meta:"Cringe Analyst"},
+	  {icon:"🪙", desc:"Ask how much they’d sell their dignity for.", meta:"Moral Marketplace"},
+	  {icon:"😴", desc:"Snore mid-answer. Deny it aggressively.", meta:"Sleep Tank"},
+	  {icon:"👑", desc:"Brag like you from hood, throw up fake gang sign.", meta:"Gang Chaser"},
+	  {icon:"📣", desc:"Shout ‘L Take’ after they answer any question.", meta:"Debate Demon"},
+	  {icon:"👹", desc:"Make someone CRASHOUT.", meta:"Debate Demon"},
+	  {icon:"💨", desc:"Rip a vape for 10 seconds.", meta:"Cloud Cringe"},
+	  {icon:"😈", desc:"React to everything someone say with passive aggression.", meta:"Daemon time"},
+	  {icon:"🤯", desc:"Ask someone: ‘Is water wet or dry?’ and elaborate for 5 minutes.", meta:"Hood Research Department"},
+	  {icon:"🐍", desc:"Speak like a snake for no reason. Hiss occasionally.", meta:"Sssus"},
+	  {icon:"✡️", desc:"Act jewish for 30 seconds.", meta:"Bank CEO"},
+	  {icon:"🧊", desc:"Roast someone drip. Say: ‘You're Cheugy AF.’", meta:"Style Violation"},
+	  {icon:"👹", desc:"Speak in a different nationality slang or accent for 30 seconds.’", meta:"Evil Era"},
+	  {icon:"🎭", desc:"Imitate cry for 30 seconds.", meta:"Sorry Act"},
+	  {icon:"🕺", desc:"Accuse someone of being too much 'Ohio energy,' then ask where their cows are.", meta:"Ohio Roast"},
+	  {icon:"🇮🇳", desc:"Make a fake Indian accent for 30 seconds.", meta:"Masala Confusion"},
+	  {icon:"💍", desc:"Claim you're their long-lost Jewish cousin showing up unannounced.", meta:"Cousin Surprise"},
+	  {icon:"🥊", desc:"Challenge someone to a virtual beef.", meta:"Streamer Beef"},
+	  {icon:"🧠", desc:"Ask: ‘Spell Semitic backwards quickly. Don’t mess up.’", meta:"Word Trap"},
+	  {icon:"💣", desc:"Ask someone if they were: ‘Sold Down The River.’", meta:"Spice Take"},
+	  {icon:"🦹", desc:"Roleplay as a canceled influencer offering shady sponsorships.", meta:"Cancelled Merchant"},
+	  {icon:"😷", desc:"Pretend you have a rare virus named after them. Panic.", meta:"Virus Bait"},
+	  {icon:"🌶️", desc:"Tell a girl your rizz is so spicy it’s illegal in 3 states.", meta:"Spicy Warning"},
+	  {icon:"🕵️", desc:"Pretend to be a Nazi hunter asking about their ancestors.", meta:"Ancestor Hunt"},
+	  {icon:"🦇", desc:"Pretend you're their online stalker quoting old tweets.", meta:"Stalker Roast"},
+	  {icon:"🐍", desc:"Ssssspeak like a snake when accusing them of being fake.", meta:"Sneaky Sus"},
+	  {icon:"🚨", desc:"Act like DEA calling about their fruit pun jokes.", meta:"Fruit Smash"},
+	  {icon:"🍑", desc:"Flirt with fruit puns: ‘Your peach game is strong.’", meta:"Peach Rizz"},
+	  {icon:"🦁", desc:"Announce you’re the King of streaming platforms; roar on mic.", meta:"King Riff"},
+	  {icon:"🎤", desc:"Perform a roast rap about their nationality and deny it’s racist.", meta:"Racist Rap?"},
+	  {icon:"📣", desc:"Crash out on random person", meta:"Local Crashout"},
+	  {icon:"🪞", desc:"Say: ‘Mirror test – repeat everything I say but more edgy.’", meta:"Mirror Challenge"},
+	  {icon:"🪞", desc:"Say: ‘Mirror test – repeat everything I do.’ Act goofy.", meta:"Mirror Challenge2"},
+	  {icon:"🪑", desc:"Act like a cocky interviewer asking dumb personal questions.", meta:"Mock Interview"},
+	  {icon:"💡", desc:"Roast someone mixing 2 different languages.’", meta:"Multilingual Roast"},
+	  {icon:"🧨", desc:"Tell bomb joke that will make laugh random person", meta:"Joke Bomber"},
+	  {icon:"🥊", desc:"Offer fake boxing match for clout. Trash-talk.", meta:"Clout Fight"},
     ];
 
     // -- Game logic
