--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
 
     .confetti {position:fixed;z-index:99;pointer-events:none;user-select:none;}
-    /* Share modal styles */
+    /* Share modal s */
     .share-modal-bg {
       position: fixed; left:0;top:0;width:100vw;height:100vh;background:#0008;z-index:1001;display: flex;justify-content: center;align-items: center;
       animation: fadein .18s;
@@ -481,7 +481,7 @@
 	}
 
     function getRankAvatar(rank) {
-      if(rank=="Cuff")             return '<img src="/assets/emoji/cuff1.png" alt="Cuff" style="width:1.4em;height:1.4em;vertical-align:middle;">';
+      if(rank=="Cuff") return '<img src="/assets/emoji/cuff1.png" alt="Cuff1" style="height:1.6em;width:auto;vertical-align:middle;">';
       if(rank=="Banana King")      return "👑🦍";
       if(rank=="Clout Demon")      return "😈🦍";
       if(rank=="Speedrunner")      return "🐒💨";
