--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
 	}
 
     function getRankAvatar(rank) {
-      if(rank=="Cuff") return '<img src="/assets/emoji/cuff1.png" alt="Cuff1" style="height:1.6em;width:auto;vertical-align:middle;">';
+      if(rank=="Cuff") 		   return '<img src="/assets/emoji/cuff1.png">';
       if(rank=="Banana King")      return "👑🦍";
       if(rank=="Clout Demon")      return "😈🦍";
       if(rank=="Speedrunner")      return "🐒💨";
