--- a/index.html
+++ b/index.html
@@ -799,6 +799,7 @@
       return "Peasant";
     }
     function getRankBadge(rank) {
+      if(rank=="Cuff") return '<span class="badge cuff">Cuff 🔴❓</span>';
       if(rank=="Banana King") return '<span class="badge king">🍌 King</span>';
       if(rank=="Clout Demon") return '<span class="badge sussy">Clout Demon 😈</span>';
       if(rank=="Speedrunner") return '<span class="badge goat">Speedrunner 💀</span>';
