--- a/index.html
+++ b/index.html
@@ -199,6 +199,14 @@
 	  margin-right: 6px;
 	  color: #fff5c8;
 	}
+	.badge.cuff {
+	  background: #f44;
+	  color: #fff;
+	  font-weight: bold;
+	  animation: kingglow 1.6s infinite alternate;
+	  box-shadow: 0 0 10px 3px #f4433688;
+	  text-shadow: 0 0 4px #f44, 0 0 2px #fff3;
+	}
 	.leaderboard-row .badge {
 	  padding: 1px 9px;
 	  border-radius: 10px;
@@ -799,7 +807,7 @@
       return "Peasant";
     }
     function getRankBadge(rank) {
-      if(rank=="Cuff") return '<span class="badge cuff">Cuff 🔴❓</span>';
+      if(rank=="Cuff") return '<span class="badge cuff">🔴 Cuff</span>';
       if(rank=="Banana King") return '<span class="badge king">🍌 King</span>';
       if(rank=="Clout Demon") return '<span class="badge sussy">Clout Demon 😈</span>';
       if(rank=="Speedrunner") return '<span class="badge goat">Speedrunner 💀</span>';
