--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@
 	}
 
     function getRankAvatar(rank) {
-      if(rank=="Cuff")             return '<img src="/assets/emoji/cuff1.png" alt="Cuff" style="width:1.4em;height:1.4em;vertical-align:middle;">';
+      if(rank=="Cuff")             return '<span class="badge cuff"><img src="/assets/emoji/cuff1.png" alt="Cuff" style="height:1.2em;vertical-align:middle;margin-right:4px;">Cuff</span>';
       if(rank=="Banana King")      return "👑🦍";
       if(rank=="Clout Demon")      return "😈🦍";
       if(rank=="Speedrunner")      return "🐒💨";
