--- a/index.html
+++ b/index.html
@@ -61,6 +61,22 @@
 	  50%  { box-shadow: 0 0 16px 5px #ffe46cdd; opacity: 1; }
 	  100% { box-shadow: 0 0 6px 2px #ffe46c77; opacity: 1; }
 	}
+	.badge.cuff {
+	  background: linear-gradient(90deg, #8b0000, #ff4444 70%, #d70040 100%);
+	  color: #fff;
+	  font-weight: bold;
+	  border: 2px solid #ff000080;
+	  box-shadow: 0 0 12px 5px #ff000088, 0 0 4px #ff3333;
+	  text-shadow: 0 0 6px #ff3333, 0 0 14px #d70040, 0 0 22px #ff0000;
+	  animation: cuff-blood-pulse 1.2s infinite alternate;
+	  letter-spacing: 1.1px;
+	  filter: drop-shadow(0 0 7px #ff3333aa);
+	}
+	@keyframes cuff-blood-pulse {
+	  0%   { box-shadow: 0 0 8px 3px #ff0000cc;}
+	  50%  { box-shadow: 0 0 20px 10px #ff3333dd;}
+	  100% { box-shadow: 0 0 8px 3px #ff0000cc;}
+	}
 
     .badge.legend {background:#ffb6f6;color:#232346;}
     .badge.goat {background:#8df7ff;color:#232346;}
