--- a/index.html
+++ b/index.html
@@ -61,23 +61,8 @@
 	  50%  { box-shadow: 0 0 16px 5px #ffe46cdd; opacity: 1; }
 	  100% { box-shadow: 0 0 6px 2px #ffe46c77; opacity: 1; }
 	}
-	.badge.cuff {
-	  background: linear-gradient(90deg, #8b0000, #ff4444 70%, #d70040 100%);
-	  color: #fff;
-	  font-weight: bold;
-	  border: 2px solid #ff000080;
-	  box-shadow: 0 0 12px 5px #ff000088, 0 0 4px #ff3333;
-	  text-shadow: 0 0 6px #ff3333, 0 0 14px #d70040, 0 0 22px #ff0000;
-	  animation: cuff-blood-pulse 1.2s infinite alternate;
-	  letter-spacing: 1.1px;
-	  filter: drop-shadow(0 0 7px #ff3333aa);
-	}
-	@keyframes cuff-blood-pulse {
-	  0%   { box-shadow: 0 0 8px 3px #ff0000cc;}
-	  50%  { box-shadow: 0 0 20px 10px #ff3333dd;}
-	  100% { box-shadow: 0 0 8px 3px #ff0000cc;}
-	}
 
+    .badge.cuff {background:#ffb6f6;color:#232346;}
     .badge.legend {background:#ffb6f6;color:#232346;}
     .badge.goat {background:#8df7ff;color:#232346;}
     .badge.sussy {background:#ffde8a;color:#232346;}
@@ -214,25 +199,6 @@
 	  letter-spacing: 0.01em;
 	  margin-right: 6px;
 	  color: #fff5c8;
-	}
-	.badge.cuff {
-	  background: linear-gradient(90deg, #8b0000, #ff4444, #d70040, #8b0000 80%);
-	  color: #fff;
-	  font-weight: bold;
-	  letter-spacing: 1.2px;
-	  border: 2px solid #ff000080;
-	  box-shadow: 0 0 16px 6px #ff0000cc, 0 0 6px #ff3333;
-	  text-shadow: 
-	    0 0 8px #ff3333,
-	    0 0 18px #d70040,
-	    0 0 28px #ff0000;
-	  animation: cuff-blood-pulse 1.4s infinite alternate, kingglow 1.2s infinite alternate;
-	  filter: drop-shadow(0 0 8px #ff3333aa);
-	}
-	@keyframes cuff-blood-pulse {
-	  0%   { box-shadow: 0 0 8px 3px #ff0000cc; text-shadow: 0 0 7px #d70040, 0 0 1px #ff3333;}
-	  50%  { box-shadow: 0 0 24px 11px #ff0000dd; text-shadow: 0 0 16px #ff3333, 0 0 8px #d70040;}
-	  100% { box-shadow: 0 0 8px 3px #ff0000cc; text-shadow: 0 0 7px #d70040, 0 0 1px #ff3333;}
 	}
 	.leaderboard-row .badge {
 	  padding: 1px 9px;
@@ -516,7 +482,7 @@
 	}
 
     function getRankAvatar(rank) {
-      if(rank=="Cuff")             return '<span class="badge cuff"><img src="/assets/emoji/cuff1.png" alt="Cuff" style="height:1.2em;vertical-align:middle;margin-right:4px;">Cuff</span>';
+      if(rank=="Cuff")             return '<img src="/assets/emoji/cuff1.png" alt="Cuff" style="width:1.4em;height:1.4em;vertical-align:middle;">';
       if(rank=="Banana King")      return "👑🦍";
       if(rank=="Clout Demon")      return "😈🦍";
       if(rank=="Speedrunner")      return "🐒💨";
