--- a/index.html
+++ b/index.html
@@ -138,7 +138,19 @@
       .prank-icon { font-size: 1.4em; }
       .streakbar { font-size: 0.98em;}
       .levelbar { font-size: 0.88em;}
+	@media (max-width: 600px) {
+	  #leaderboardSticky {
+	    position: static !important;
+	    width: 100vw;
+	    box-shadow: none;
+	    border-radius: 0;
+	    padding-bottom: 0;
+	    margin-bottom: 30px;
+	  }
+	}
 
+
+	    
 	#leaderboardSticky {
 	  position: fixed;
 	  left: 0; right: 0; bottom: 0;
