--- a/index.html
+++ b/index.html
@@ -138,30 +138,16 @@
       .prank-icon { font-size: 1.4em; }
       .streakbar { font-size: 0.98em;}
       .levelbar { font-size: 0.88em;}
-	@media (max-width: 600px) {
+
 	  #leaderboardSticky {
-	    position: static !important;
+	    position: static;
 	    width: 100vw;
-	    box-shadow: none;
-	    border-radius: 0;
-	    padding-bottom: 0;
-	    margin-bottom: 30px;
+	    background: none;
+	    pointer-events: none;
+	    display: flex;
+	    justify-content: center;
+	    padding-bottom: env(safe-area-inset-bottom, 0);
 	  }
-	}
-
-
-	    
-	#leaderboardSticky {
-	  position: fixed;
-	  left: 0; right: 0; bottom: 0;
-	  z-index: 50;
-	  width: 100vw;
-	  background: none;
-	  pointer-events: none;
-	  display: flex;
-	  justify-content: center;
-	  padding-bottom: env(safe-area-inset-bottom, 0);
-	}
 	.leaderboard-container {
 	  width: 96vw; max-width: 560px;
 	  margin: 0 auto 12px auto;
