--- a/index.html
+++ b/index.html
@@ -348,9 +348,12 @@
 		<span class="tooltip">Mute/Unmute Sound</span>
 	  </span>
 	</div>
+	<!-- COLLAPSIBLE LEADERBOARD MOBILE BUTTON -->
+	<button id="toggleLbBtn" class="mobile-lb-btn" type="button" style="display:none;margin:14px auto 3px auto;">🏆 Show Leaderboard</button>
+	<!-- Collapsible leaderboard -->
+	<div id="leaderboardSticky" class="collapsible-leaderboard"></div>
   </div>
-  <!-- Sticky leaderboard, always visible at bottom -->
-  <div id="leaderboardSticky"></div>
+
   <div id="footer" class="copyright">
     Monkeyy.app is not affiliated with monkey.app.<br>
     For entertainment only. Grind responsibly.
